Add s to http to fix mixed active content error
Since canada-ca.github.io uses HTTPS, the CDN must also be HTTPS.

Fixes #3

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -61,7 +61,7 @@
 </section>
 </div>
 </div>
-<nav role="navigation" id="wb-sm" data-ajax-replace="http://cdn.canada.ca/gcweb-cdn-live/sitemenu/sitemenu-{{ page.lang }}.html" data-trgt="mb-pnl" class="wb-menu visible-md visible-lg" typeof="SiteNavigationElement">
+<nav role="navigation" id="wb-sm" data-ajax-replace="https://cdn.canada.ca/gcweb-cdn-live/sitemenu/sitemenu-{{ page.lang }}.html" data-trgt="mb-pnl" class="wb-menu visible-md visible-lg" typeof="SiteNavigationElement">
 <div class="container nvbar">
 <h2>{{ site.TopicsMenu[page.lang] }}</h2>
 <div class="row">
