--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,4 +11,13 @@ layout: default
     {{ content }}
   </div>
 
+  <div class="PageNavigation">
+  {% if page.previous.url %}
+    <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
+  {% endif %}
+  {% if page.next.url %}
+    <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
+  {% endif %}
+</div>
+  
 </article>
