--- a/_includes/header.html
+++ b/_includes/header.html
@@ -85,7 +85,7 @@
 <ol class="breadcrumb">
 <li><a href="https://www.canada.ca/{{ page.lang }}.html">{{ site.home[page.lang] }}</a></li>
 {% if page.ref != "index" %}
-  {% if page.lang = "en" %}
+  {% if page.lang == "en" %}
     <li><a href="/">{{ site.AllPosts[page.lang] }}</a></li>
   {% else %}
     <li><a href="/accueil.html">{{ site.AllPosts[page.lang] }}</a></li>
