--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,4 +23,17 @@
 		
 		<![endif]-->
 <noscript><link rel="stylesheet" href="{{ site.baseurl }}/wet-boew/css/noscript.min.css" /></noscript>
+
+	<!--google stuffs - do not eat-->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-105628416-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+	
 </head>
