--- a/_includes/blogheader.html
+++ b/_includes/blogheader.html
@@ -97,6 +97,88 @@
 </nav>
 </header>
 
+<style>
+
+   div.blog {
+      position: relative;
+
+   }
+  
+	.gray {
+	
+	background-color: #eeeeee;
+	padding-bottom: 15px;
+
+	
+	}
+   
+	h3.blog {
+     position: absolute;
+	 top: 0;
+     left: 0;
+     width: 100%;
+     text-align: center;
+	 color: white;
+	 font-size: 5.5vw;
+	 font-weight: normal;
+	 padding-top: 5px;
+	
+	
+   }
+   @media screen and (min-width: 1800px) {
+  h3.blog {
+     font-size: 98px;
+  }
+  
+   
+}
+   
+   h4.blog {
+	 
+     position: absolute;
+	 top: 0;
+     left: 0;
+     width: 100%;
+     text-align: center;
+	 color: white;
+	 font-size: 8.0vw;
+	 font-weight: normal;
+	
+   }
+   
+	p.blog {
+	 padding-top: 5px;
+	 font-size: 1.5vw;
+	 font-weight: normal;
+   }
+    @media screen and (min-width: 1800px) {
+  p.blog {
+     font-size: 24px;
+  }
+  
+   
+   
+</style>   
+
+
+<aside class="gray">
+        <div class="container blog"><div class="row">
+            <h3 class="wb-inv">Canada.ca blog</h3>
+                            <figure>
+
+                                <img class="img-responsive" src="./images/1170x200.png" alt="">
+										
+										<h3 class="blog hidden-xs"> Canada.ca blog <p class="blog hidden-xs">Evidence and insights from the Canada.ca team</p> 
+										</h3>
+										<h4 class="blog hidden-lg hidden-md hidden-sm">Canada.ca blog</h4>
+								
+                            </figure>
+                        </a>
+                    
+            
+           </div>
+        </div>
+    </aside>
 
 <main role="main" property="mainContentOfPage" class="container">
 
