--- a/_includes/footer_fr.html
+++ b/_includes/footer_fr.html
@@ -5,7 +5,7 @@
 </aside>
 <footer role="contentinfo" id="wb-info">
 <nav role="navigation" class="container wb-navcurr">
-<h2 class="wb-inv">About government</h2>
+<h2 class="wb-inv">Au sujet du gouvernement</h2>
 <ul class="list-unstyled colcount-sm-2 colcount-md-3">
 <li><a href="https://www.canada.ca/en/contact.html">Contact us</a></li>
 <li><a href="https://www.canada.ca/en/government/dept.html">Departments and agencies</a></li>
@@ -23,11 +23,11 @@
 <nav class="col-md-10 ftr-urlt-lnk">
 <h2 class="wb-inv">About this site</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/social.html">Social media</a></li>
-<li><a href="https://www.canada.ca/en/mobile.html">Mobile applications</a></li>
-<li><a href="https://www1.canada.ca/en/newsite.html">About Canada.ca</a></li>
-<li><a href="https://www.canada.ca/en/transparency/terms.html">Terms and conditions</a></li>
-<li><a href="https://www.canada.ca/en/transparency/privacy.html">Privacy</a></li>
+<li><a href="https://www.canada.ca/fr/social.html">Social media</a></li>
+<li><a href="https://www.canada.ca/fr/mobile.html">Mobile applications</a></li>
+<li><a href="https://www1.canada.ca/fr/newsite.html">About Canada.ca</a></li>
+<li>a href="https://www.canada.ca/fr/transparence/avis.html">Avis</a></li>
+<li><a href="https://www.canada.ca/fr/transparence/confidentialite.html">Confidentialité</a></li>
 </ul>
 </nav>
 <div class="col-xs-6 visible-sm visible-xs tofpg">
