--- a/_includes/footer_fr.html
+++ b/_includes/footer_fr.html
@@ -26,7 +26,7 @@
 <li><a href="https://www.canada.ca/fr/social.html">Social media</a></li>
 <li><a href="https://www.canada.ca/fr/mobile.html">Mobile applications</a></li>
 <li><a href="https://www1.canada.ca/fr/newsite.html">About Canada.ca</a></li>
-<li>a href="https://www.canada.ca/fr/transparence/avis.html">Avis</a></li>
+<li><a href="https://www.canada.ca/fr/transparence/avis.html">Avis</a></li>
 <li><a href="https://www.canada.ca/fr/transparence/confidentialite.html">Confidentialité</a></li>
 </ul>
 </nav>
