--- a/_includes/footer_fr.html
+++ b/_includes/footer_fr.html
@@ -7,25 +7,25 @@
 <nav role="navigation" class="container wb-navcurr">
 <h2 class="wb-inv">Au sujet du gouvernement</h2>
 <ul class="list-unstyled colcount-sm-2 colcount-md-3">
-<li><a href="https://www.canada.ca/en/contact.html">Contact us</a></li>
-<li><a href="https://www.canada.ca/en/government/dept.html">Departments and agencies</a></li>
-<li><a href="https://www.canada.ca/en/government/publicservice.html">Public service and military</a></li>
-<li><a href="https://www.canada.ca/en/news.html">News</a></li>
-<li><a href="https://www.canada.ca/en/government/system/laws.html">Treaties, laws and regulations</a></li>
-<li><a href="https://www.canada.ca/en/transparency/reporting.html">Government-wide reporting</a></li>
-<li><a href="http://pm.gc.ca/eng">Prime Minister</a></li>
-<li><a href="https://www.canada.ca/en/government/system.html">How government works</a></li>
-<li><a href="http://open.canada.ca/en/">Open government</a></li>
+<li><a href="/mainmenu/contact_us_f.html">Contactez-nous</a></li>
+<li><a href="https://www.canada.ca/fr/gouvernement/min.html">Ministères et organismes</a></li>
+<li><a href="https://www.canada.ca/fr/gouvernement/fonctionpublique.html">Fonction publique et force militaire</a></li>
+<li><a href="https://www.canada.ca/fr/nouvelles.html">Nouvelles</a></li>
+<li><a href="https://www.canada.ca/fr/gouvernement/systeme/lois.html">Traités, lois et règlements</a></li>
+<li><a href="https://www.canada.ca/fr/transparence/rapports.html">Rapports à l'échelle du gouvernement</a></li>
+<li><a href="http://pm.gc.ca/fra">Premier ministre</a></li>
+<li><a href="https://www.canada.ca/fr/gouvernement/systeme.html">Comment le gouvernement fonctionne</a></li>
+<li><a href="http://ouvert.canada.ca/">Gouvernement ouvert</a></li>
 </ul> </nav>
 <div class="brand">
 <div class="container">
 <div class="row">
 <nav class="col-md-10 ftr-urlt-lnk">
-<h2 class="wb-inv">About this site</h2>
+<h2 class="wb-inv">À propos du site</h2>
 <ul>
-<li><a href="https://www.canada.ca/fr/social.html">Social media</a></li>
-<li><a href="https://www.canada.ca/fr/mobile.html">Mobile applications</a></li>
-<li><a href="https://www1.canada.ca/fr/newsite.html">About Canada.ca</a></li>
+<li><a href="https://www.canada.ca/fr/sociaux.html">Médias sociaux</a></li>
+<li><a href="https://www.canada.ca/fr/mobile.html">Applications mobiles</a></li>
+<li><a href="https://www1.canada.ca/fr/nouveausite.html">À propos de Canada.ca</a></li>
 <li><a href="https://www.canada.ca/fr/transparence/avis.html">Avis</a></li>
 <li><a href="https://www.canada.ca/fr/transparence/confidentialite.html">Confidentialité</a></li>
 </ul>
@@ -34,7 +34,7 @@
 <a href="#wb-cont">Top of Page <span class="glyphicon glyphicon-chevron-up"></span></a>
 </div>
 <div class="col-xs-6 col-md-2 text-right">
-<object type="image/svg+xml" tabindex="-1" role="img" data="{{ site.baseurl }}/wet-boew/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
+<object type="image/svg+xml" tabindex="-1" role="img" data="{{ site.baseurl }}/wet-boew/assets/wmms-blk.svg" aria-label="Symbole du gouvernement du Canada"></object>
 </div>
 </div>
 </div>
