--- a/_includes/blogheader_fr.html
+++ b/_includes/blogheader_fr.html
@@ -105,7 +105,7 @@
 
                                 <img class="img-responsive" src="./images/1170x200.png" alt="">
 										
-										<h3 class="blog hidden-xs"> Blogue de Canada.ca <p class="blog hidden-xs"></p> 
+										<h3 class="blog hidden-xs"> Blogue de Canada.ca <p class="blog hidden-xs">Validations et perspectives de l’équipe Canada.ca</p> 
 										</h3>
 										<h4 class="blog hidden-lg hidden-md hidden-sm">Blogue de Canada.ca</h4>
 								
