--- a/_includes/blogheader.html
+++ b/_includes/blogheader.html
@@ -36,7 +36,7 @@
 </section> -->
 	
 	<!-- bandaid fix -->
-<header role="banner">
+
 <div id="wb-bnr" class="container">
 
     
@@ -46,7 +46,7 @@
         <div class="col-md-12">
             <ul class="list-inline margin-bottom-none">
                 <li>
-                    <a lang="fr" href="/accuiel.html">
+                    <a lang="fr" href="/accueil.html">
                         Fran&ccedil;ais
                         
                     </a>
@@ -107,6 +107,27 @@
 </div>
 </div>
 </nav>
+	<! -- fix -->
+<nav role="navigation" id="wb-bc" property="breadcrumb">
+<h2>You are here:</h2>
+<div class="container">
+<div class="row">
+<ol class="breadcrumb">
+<li><a href="https://www.canada.ca/en.html">Home</a></li>
+
+  
+    <li><a href="/">Canada.ca blog</a></li>
+  
+
+</ol>
+</div>
+</div>
+</nav>
+
+	<! -- fix -->
+	
+	<!-- jekyll 
+	
 <nav role="navigation" id="wb-bc" property="breadcrumb">
 <h2>{{ site.YouAreHere[page.lang] }}:</h2>
 <div class="container">
@@ -124,7 +145,7 @@
 </div>
 </div>
 </nav>
-</header>
+</header> -->
 
 
 <aside class="gray">
