--- a/_includes/blogheader.html
+++ b/_includes/blogheader.html
@@ -35,7 +35,7 @@
 </div>
 </section> -->
 	
-	<!-- bandaid fix -->
+	<!-- fix -->
 
 <div id="wb-bnr" class="container">
 
@@ -58,7 +58,7 @@
     </div>
 </section>
 	
-	<!-- bandaid fix -->
+	<!-- fix -->
 
 
 <div class="row">
