--- a/_includes/blogheader.html
+++ b/_includes/blogheader.html
@@ -10,7 +10,7 @@
 <section id="wb-lng" class="visible-md visible-lg text-right">
 	
 	
-<!-- <h2 class="wb-inv">{{ site.LanguageSelection[page.lang] }}</h2>
+<h2 class="wb-inv">{{ site.LanguageSelection[page.lang] }}</h2>
 <div class="row">
 <div class="col-md-12">
 <ul class="list-inline margin-bottom-none">
@@ -33,33 +33,8 @@
 </ul>
 </div>
 </div>
-</section> -->
-	
-	<!-- fix -->
-
-<div id="wb-bnr" class="container">
-
-    
-    <section id="wb-lng" class="visible-md visible-lg text-right">
-    <h2 class="wb-inv">Language selection</h2>
-    <div class="row">
-        <div class="col-md-12">
-            <ul class="list-inline margin-bottom-none">
-                <li>
-                    <a lang="fr" href="/accueil.html">
-                        Fran&ccedil;ais
-                        
-                    </a>
-                </li>
-                
-                
-            </ul>
-        </div>
-    </div>
 </section>
 	
-	<!-- fix -->
-
 
 <div class="row">
 <div class="brand col-xs-8 col-sm-9 col-md-6">
@@ -107,26 +82,7 @@
 </div>
 </div>
 </nav>
-	<! -- fix -->
-<nav role="navigation" id="wb-bc" property="breadcrumb">
-<h2>You are here:</h2>
-<div class="container">
-<div class="row">
-<ol class="breadcrumb">
-<li><a href="https://www.canada.ca/en.html">Home</a></li>
-
-  
-    <li><a href="/">Canada.ca blog</a></li>
-  
-
-</ol>
-</div>
-</div>
-</nav>
-
-	<! -- fix -->
 	
-	<!-- jekyll 
 	
 <nav role="navigation" id="wb-bc" property="breadcrumb">
 <h2>{{ site.YouAreHere[page.lang] }}:</h2>
@@ -136,7 +92,7 @@
 <li><a href="https://www.canada.ca/{{ page.lang }}.html">{{ site.home[page.lang] }}</a></li>
 {% if page.ref != "index" %}
   {% if page.lang == "en" %}
-    <li><a href="/">{{ site.AllPosts[page.lang] }}</a></li>
+    <li><a href="/">{{ site.Canada.ca blog[page.lang] }}</a></li>
   {% else %}
     <li><a href="/accueil.html">{{ site.AllPosts[page.lang] }}</a></li>
   {% endif %}
@@ -145,7 +101,7 @@
 </div>
 </div>
 </nav>
-</header> -->
+</header> 
 
 
 <aside class="gray">
