--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,21 @@
 ---
 layout: default
 ---
+
+<style>
+
+.blogholder {
+
+	display: inline-block !important;
+	position: relative;
+	width: 52em;
+	
+}
+
+</style>
+
+<div class="blogholder img-responsive">
+
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
@@ -13,6 +28,7 @@ layout: default
   </div>
 
 </article>
+</div>
 
 <nav role="navigation"> 
   <h2 class="wb-inv">Document navigation</h2> 
