removing gov initatives

--- a/_includes/footer_fr.html
+++ b/_includes/footer_fr.html
@@ -1,8 +1,8 @@
 </main>
-<aside class="gc-nttvs container">
+<!-- <aside class="gc-nttvs container">
 <h2>{{ site.GCActivitiesInitiatives[page.lang] }}</h2>
 <div id="gcwb_prts" class="wb-eqht row wb-init wb-eqht-inited" data-ajax-replace="https://cdn.canada.ca/gcweb-cdn-live/features/features-{{ page.lang }}.html"></div>
-</aside>
+</aside> -->
 <footer role="contentinfo" id="wb-info">
 <nav role="navigation" class="container wb-navcurr">
 <h2 class="wb-inv">Au sujet du gouvernement</h2>
