--- a/pages/custom.css
+++ b/pages/custom.css
@@ -7,45 +7,23 @@ body {
     -webkit-font-smoothing: antialiased;
 }
 
-/* a {
-    color: #FF6B6B;
-    &:hover {
-        color: #FFFFF;
-        text-decoration: none;
-    } */
-}
-.example-header {
-    background: #3D4351;
-    color: #FFF;
-    font-weight: 300;
-    padding: 3em 1em;
-    text-align: center;
-    h1 {
-        color: #FFF;
-        font-weight: 300;
-        margin-bottom: 20px
-    }
-    p {
-        font-size: 12px;
-        text-transform: uppercase;
-        letter-spacing: 3px;
-        font-weight: 700;
-    }
+
+
 }
 .container-fluid {
     .row {
         padding: 0 0 4em 0;
         &:nth-child(even) {
-            background: #F1F4F5;
+            background: #ccc;
         }
     }
 }
 
-.example-title {
+.title-timeline {
     text-align: center;
     margin-bottom: 60px;
     padding: 3em 0;
-    border-bottom: 1px solid #E4EAEC;
+    border-bottom: 1px solid #ccc;
     p {
         margin: 0 auto;
         font-size: 16px;
@@ -53,44 +31,37 @@ body {
     }
 }
 
-/*==================================
-    TIMELINE
-==================================*/
-
-    /*-- GENERAL STYLES
-    ------------------------------*/
+/* -- timeline -- */
     .timeline {
         line-height: 1.4em;
         list-style: none;
         margin: 0;
         padding: 0;
         width: 100%;
-        h1, h2, h3, h4, h5, h6 {
-            line-height: inherit;
-        }
+   
     }
 
-    /*----- TIMELINE ITEM -----*/
+/* -- timeline block, including date and projects -- */
 
     .timeline-item {
         padding-left: 40px;
         position: relative;
-        &:last-child {
-            padding-bottom: 0;
-        }
+      
     }
 
-    /*----- TIMELINE INFO -----*/
+/* -- timeline year -- */
 
-    .timeline-info {
+    .timeline-year {
         font-size: 14px;
         font-weight: 700;
-        letter-spacing: 3px;
+        letter-spacing: 2px;
         margin: 0 0 .5em 0;
         text-transform: uppercase;
         white-space: nowrap;
     }
-    /*----- TIMELINE MARKER -----*/
+
+	
+/* -- timeline markers -- */
 	
 	 .timeline-marker:before {
         position: absolute;
@@ -137,43 +108,9 @@ body {
         border: 3px solid #CCCCCC; 
     } 
 
-   /* original stuff that doesn,t work .timeline-marker {
-        position: absolute;
-        top: 0; bottom: 0; left: 0;
-        width: 15px;
-	
-       &:before {
-			background-color: red;
-            background: #FF6B6B;
-            border: 3px solid transparent;
-            border-radius: 100%;
-            content: "";
-            display: block;
-            height: 15px;
-            position: absolute;
-            top: 4px; left: 0;
-            width: 15px;
-            transition: background 0.3s ease-in-out,
-                    border 0.3s ease-in-out; 
-        }
-        &:after {
-            content: "";
-            width: 3px;
-            background: #CCD5DB;
-            display: block;
-            position: absolute;
-            top: 24px; bottom: 0; left: 6px;
-        }
-        .timeline-item:last-child &:after {
-            content: none;
-        }
-    }
-    .timeline-item:not(.period):hover .timeline-marker:before {
-        background: transparent;
-        border: 3px solid #FF6B6B; 
-    } */
+   
 
-    /*----- TIMELINE CONTENT -----*/
+/*----- content -----*/
 
     .timeline-content {
         padding-bottom: 40px;
@@ -182,55 +119,20 @@ body {
         }
     }
 
-    /*----- TIMELINE PERIOD -----
-    
-    .period {
-        padding: 0;
-        .timeline-info {
-            display: none;
-        }
-        .timeline-marker {
-            &:before {
-                background: transparent;
-                content: "";
-                width: 15px;
-                height: auto;
-                border: none;
-                border-radius: 0;
-                top: 0;
-                bottom: 30px;
-                position: absolute;
-                border-top: 3px solid #CCD5DB;
-                border-bottom: 3px solid #CCD5DB;
-            }
-            &:after {
-                content: "";
-                height: 32px;
-                top: auto;
-            }
-        }
-        .timeline-content {
-            padding: 40px 0 70px;
-        }
-        .timeline-title {
-            margin: 0;
-        }
-    } */
-
-    
-
-    /*----------------------------------------------
-        MOD: MARKER OUTLINE
-    ----------------------------------------------*/
-        
-        .marker-outline {
-            .timeline-marker {
-                &:before {
-                    background: transparent;
-                    border-color: #FF6B6B;
-                }
-            }
-            .timeline-item:hover .timeline-marker:before {
-                background: #FF6B6B;
-            }
-        }
+  .details-custom {
+	  
+	  border: none !important; 
+	  margin-top: 25px;
+  }
+  
+    .borderless {
+	  
+	  border: none !important; 
+	
+  }
+  
+   .summary-custom {
+	  
+	 border-top: 1px solid #ccc; 
+	 padding-top: 15px;
+  }
