add date modified

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -55,3 +55,6 @@ layout: default
   {% endfor %}
   </ul>
 </nav>
+
+<div class="clearfix"></div>
+  <p class="pull-left" id="wb-cont" itemprop="">{{ page.datemodified }}</p>
