--- a/css/blog.css
+++ b/css/blog.css
@@ -7,11 +7,6 @@ body {
     -webkit-font-smoothing: antialiased;
 }
 
-.custul {
-
-  list-style-type: circle;
-
-}
 
 
 
@@ -19,6 +14,7 @@ body {
 
 padding-top: 5px;
 padding-bottom: 5px;
+list-style-type: disc;
 
 }
 
