--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,6 +19,23 @@ layout: default
 		
 }
 
+ 
+.pquote {
+	  
+    float: right;
+    width: 200px;
+    color: #030;
+    font-size: 26px;
+    line-height: 0.9;
+    font-style: italic;
+    padding: 13px;
+}
+
+blockquote {
+    margin: 0;
+}
+  
+
 </style>
 
 <div class="blogholder img-responsive">
