--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,7 +25,7 @@ layout: default
     float: right;
     width: 400px;
     color: #030;
-    font-size: 37px;
+    font-size: 37px !important;
     line-height: 0.9;
     padding: 13px;
 }
