--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,15 +23,30 @@ layout: default
 .pquote {
 	  
     float: right;
-    width: 400px;
-    color: #030;
-    font-size: 37px !important;
-    line-height: 0.9;
-    padding: 13px;
+    width: 500px;
+    font-size: 30px !important;
+    line-height: 1.1em;
+    padding: 25px;
 }
 
-blockquote {
-    margin: 0;
+blockquote 
+
+{
+    margin: 10px;
+	margin-left: 25px;
+
+}
+  
+blockquote p {
+
+color: #3095B5 !important;
+
+}
+
+.quotesig {
+
+	font-size: 14px;
+	
 }
   
 
