--- a/_includes/blogheader.html
+++ b/_includes/blogheader.html
@@ -104,7 +104,7 @@
 </header> 
 
 
-<aside class="gray">
+<!-- <aside class="gray">
         <div class="container blog"><div class="row">
             <h3 class="wb-inv">Canada.ca blog</h3>
                             <figure>
@@ -121,7 +121,11 @@
             
            </div>
         </div>
-    </aside>
+    </aside> -->
 
 <main role="main" property="mainContentOfPage" class="container">
 
+   <h1 property="name" id="wb-cont" dir="ltr">Canada.ca blog</h1>
+
+ <p class="pagetag">
+            <div class="pagetag">Evidence and insights from the Canada.ca team.</div> </p>
