--- a/_includes/blogheader_fr.html
+++ b/_includes/blogheader_fr.html
@@ -98,7 +98,7 @@
 </header>
 
 
-<aside class="gray">
+<!-- <aside class="gray">
         <div class="container blog"><div class="row">
             <h3 class="wb-inv">Canada.ca blog</h3>
                             <figure>
@@ -116,5 +116,9 @@
            </div>
         </div>
     </aside>
-
+-->
 <main role="main" property="mainContentOfPage" class="container">
+	<h1 property="name" id="wb-cont" dir="ltr">Blogue de Canada.ca</h1>
+
+ <p class="pagetag">
+            <div class="pagetag">Validations et perspectives de l’équipe Canada.ca.</div> </p>
