Don't put drafts in the index page or link from next/prev posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,19 +9,19 @@ layout: default
 	display: inline-block !important;
 	position: relative;
 	width: 52em;
-	
+
 }
 
 .border
 	{
-	
+
 	border: 2px solid #ccc;
-		
+
 }
 
- 
+
 .pquote {
-	  
+
     float: right;
     width: 500px;
     font-size: 30px !important;
@@ -29,14 +29,14 @@ layout: default
     padding: 25px;
 }
 
-blockquote 
+blockquote
 
 {
     margin: 10px;
 	margin-left: 25px;
 
 }
-  
+
 blockquote p {
 
 color: #3095B5 !important;
@@ -46,9 +46,9 @@ color: #3095B5 !important;
 .quotesig {
 
 	font-size: 14px;
-	
+
 }
-  
+
 
 </style>
 
@@ -60,7 +60,7 @@ color: #3095B5 !important;
     <h1 class="post-title" id="wb-cont" itemprop="name headline">{{ page.title }}</h1>
     <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %}<span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
   </header>
-  
+
   <div class="post-content" itemprop="articleBody">
     {{ content }}
   </div>
@@ -68,11 +68,12 @@ color: #3095B5 !important;
 </article>
 </div>
 
-<nav role="navigation"> 
-  <h2 class="wb-inv">Document navigation</h2> 
+<nav role="navigation">
+  <h2 class="wb-inv">Document navigation</h2>
   <ul class="pager">
   {% assign posts=site.posts | where:"lang", page.lang %}
   {% for post in posts %}
+	{% unless post.draft %}
       {% if post.title == page.title %}
           {% unless forloop.last %}
               {% assign next = posts[forloop.index] %}
@@ -83,6 +84,7 @@ color: #3095B5 !important;
           {% endunless %}
       {% endif %}
       {% assign prev = post %}
+		{% endunless %}
   {% endfor %}
   </ul>
 </nav>
