--- a/_includes/blogheader.html
+++ b/_includes/blogheader.html
@@ -90,11 +90,10 @@
 <div class="row">
 <ol class="breadcrumb">
 <li><a href="https://www.canada.ca/{{ page.lang }}.html">{{ site.home[page.lang] }}</a></li>
-{% if page.ref != "index" %}
   {% if page.lang == "en" %}
-    <li><a href="/">{{ site.AllPosts[page.lang] }}</a></li>
+    <li><a href="https://www.canada.ca/en/government/about.html">About Canada.ca</a></li>
   {% else %}
-    <li><a href="/accueil.html">{{ site.AllPosts[page.lang] }}</a></li>
+    <li><a href="https://www.canada.ca/fr/gouvernement/a-propos.html">Au sujet de Canada.ca</a></li>
   {% endif %}
 {% endif %}
 </ol>
