--- a/_includes/blogheader_fr.html
+++ b/_includes/blogheader_fr.html
@@ -88,7 +88,7 @@
   {% if page.lang == "en" %}
     <li><a href="/">{{ site.AllPosts[page.lang] }}</a></li>
   {% else %}
-    <li><a href="/accueil.html">{{ site.AllPosts[page.lang] }}</a></li>
+    <li><a href="https://www.canada.ca/fr/gouvernement/a-propos.html">Au sujet de Canada.ca</a></li>
   {% endif %}
 {% endif %}
 </ol>
