--- a/_includes/header.html
+++ b/_includes/header.html
@@ -84,7 +84,7 @@
 <div class="row">
 <ol class="breadcrumb">
 <li><a href="https://www.canada.ca/{{ page.lang }}.html">{{ site.home[page.lang] }}</a></li>
-  <li>...</li>
+  <li>&hellip;</li>
 {% if page.ref != "index" %}
   {% if page.lang == "en" %}
     <li><a href="/">{{ site.AllPosts[page.lang] }}</a></li>
