Search engine update

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
     {% if my_post.lang != page.lang %}
       <li><a lang="{{ my_post.lang }}" hreflang="{{ my_post.lang }}" href="{{ my_post.url | prepend: post.baseurl }}">{{ site.language[my_post.lang] }}</a></li>
     {% endif %}
-  {% endfor %}  
+  {% endfor %}
 
   {% assign pages=site.pages | where:"ref", page.ref | sort: 'lang' %}
   {% for my_page in pages %}
@@ -26,7 +26,7 @@
       <li><a lang="{{ my_page.lang }}" hreflang="{{ my_page.lang }}" href="{{ my_page.url | prepend: site.baseurl }}">{{ site.language[my_page.lang] }}</a></li>
     {% endif %}
   {% endfor %}
-  
+
 
 </ul>
 </div>
@@ -45,7 +45,7 @@
 </section>
 <section id="wb-srch" class="col-xs-6 text-right visible-md visible-lg">
 <h2>Search</h2>
-<form action="#" method="post" name="cse-search-box" role="search" class="form-inline">
+<form action="https://www.canada.ca/en/sr/srb.html" method="post" name="cse-search-box" role="search" class="form-inline">
 <div class="form-group">
 <label for="wb-srch-q" class="wb-inv">{{ site.SearchWebsite[page.lang] }}</label>
 <input id="wb-srch-q" list="wb-srch-q-ac" class="wb-srch-q form-control" name="q" type="search" value="" size="27" maxlength="150" placeholder="{{ site.SearchCanadaCa[page.lang] }}">
@@ -100,4 +100,3 @@
 
 
 <main role="main" property="mainContentOfPage" class="container">
-
