--- a/_includes/header.html
+++ b/_includes/header.html
@@ -45,7 +45,7 @@
 </section>
 <section id="wb-srch" class="col-xs-6 text-right visible-md visible-lg">
 <h2>Search</h2>
-<form action="https://www.canada.ca/en/sr/srb.html" method="post" name="cse-search-box" role="search" class="form-inline">
+<form action="https://recherche-search.gc.ca/rGs/s_r" method="post" name="cse-search-box" role="search" class="form-inline">
 <div class="form-group">
 <label for="wb-srch-q" class="wb-inv">{{ site.SearchWebsite[page.lang] }}</label>
 <input id="wb-srch-q" list="wb-srch-q-ac" class="wb-srch-q form-control" name="q" type="search" value="" size="27" maxlength="150" placeholder="{{ site.SearchCanadaCa[page.lang] }}">
