--- a/_includes/blogheader_fr.html
+++ b/_includes/blogheader_fr.html
@@ -18,7 +18,7 @@
     {% if my_post.lang != page.lang %}
       <li><a lang="{{ my_post.lang }}" hreflang="{{ my_post.lang }}" href="{{ my_post.url | prepend: post.baseurl }}">{{ site.language[my_post.lang] }}</a></li>
     {% endif %}
-  {% endfor %}  
+  {% endfor %}
 
   {% assign pages=site.pages | where:"ref", page.ref | sort: 'lang' %}
   {% for my_page in pages %}
@@ -26,7 +26,7 @@
       <li><a lang="{{ my_page.lang }}" hreflang="{{ my_page.lang }}" href="{{ my_page.url | prepend: site.baseurl }}">{{ site.language[my_page.lang] }}</a></li>
     {% endif %}
   {% endfor %}
-  
+
 
 </ul>
 </div>
@@ -45,10 +45,15 @@
 </section>
 <section id="wb-srch" class="col-xs-6 text-right visible-md visible-lg">
 <h2>Search</h2>
-<form action="#" method="post" name="cse-search-box" role="search" class="form-inline">
+<form action="https://recherche-search.gc.ca/rGs/s_r?#wb-land" method="get" role="search" class="form-inline">
 <div class="form-group">
 <label for="wb-srch-q" class="wb-inv">{{ site.SearchWebsite[page.lang] }}</label>
 <input id="wb-srch-q" list="wb-srch-q-ac" class="wb-srch-q form-control" name="q" type="search" value="" size="27" maxlength="150" placeholder="{{ site.SearchCanadaCa[page.lang] }}">
+<input name="st" value="s" type="hidden"/>
+<input name="num" value="10" type="hidden"/>
+<input name="langs" value="fra" type="hidden"/>
+<input name="st1rt" value="0" type="hidden">
+<input name="s5bm3ts21rch" value="x" type="hidden"/>
 <datalist id="wb-srch-q-ac">
 <!--[if lte IE 9]><select><![endif]-->
 <!--[if lte IE 9]></select><![endif]-->
@@ -104,15 +109,15 @@
                             <figure>
 
                                 <img class="img-responsive" src="./images/1170x200.png" alt="">
-										
-										<h3 class="blog hidden-xs"> Blogue de Canada.ca <p class="blog hidden-xs">Validations et perspectives de l’équipe Canada.ca</p> 
+
+										<h3 class="blog hidden-xs"> Blogue de Canada.ca <p class="blog hidden-xs">Validations et perspectives de l’équipe Canada.ca</p>
 										</h3>
 										<h4 class="blog hidden-lg hidden-md hidden-sm">Blogue de Canada.ca</h4>
-								
+
                             </figure>
                         </a>
-                    
-            
+
+
            </div>
         </div>
     </aside>
