--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -61,7 +61,7 @@ color: #3095B5 !important;
     <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.pubdate }}</time>{% if page.author %}<span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
   </header>
 
-  <div class="post-content" itemprop="articleBody">
+  <div class="post-content cnt-wdth-lmtd" itemprop="articleBody">
     {{ content }}
   </div>
 
