style: Update head.html
Add stye tag

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,4 +19,9 @@
 			ga('create', 'UA-105628416-1', 'auto');
 			ga('send', 'pageview');
 		</script>
+		<style>
+			.wb-graph figcaption {
+				font-weight: 700;
+			}
+		</style>
 	</head>
